<resources>
    <string name="app_name">Transporte_Masivo</string>
    <string name="iniciasesion">Iniciar Sesion</string>
    <string name="creatucuenta">Crea Tu Cuenta</string>
    <string name="info">Encuentra tu camino con facilidad: ¡Tu ruta perfecta al alcance de tu mano!</string>
    <string name="infosignin">Descubre tu ruta ideal</string>
    <string name="correo">Escriba su correo</string>
    <string name="pass">Escriba su contraseña</string>
    <string name="nombre">Nombre Completo</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Dirección</string>
    <string name="crearcuenta">No estás registrado?</string>
    <string name="tienecuenta">Ya tienes cuenta?</string>
    <string name="crearcuenta2">Crear cuenta</string>
    <string name="registrarse">Registrarse</string>
    <string name="rutas">Rutas</string>
    //nose
    <string name="Prestados">Prestados</string>
    <string name="Agregar">Agregar</string>
    <string name="Salir">Salir</string>
    <string name="administrador">Administrador</string>
    <string name="agregarRuta">Agregar Ruta</string>
    <string name="nombreRuta">Nombre</string>
    <string name="descripcionRuta">Descripcion</string>
    <string name="fotoRuta">Foto</string>
    <string name="tipoRuta">Tipo de Transporte</string>
    <string name="agregarParada">Agregar Parada</string>
    <string name="ubicacionParada">Ubicacion</string>
    <string name="mapaParada">Mapa</string>
    <string name="idRutaParada">id_ruta</string>
    <string name="agregarPunto">Agregar Punto de Recargar</string>
    <string name="nombrePunto">Nombre</string>
    <string name="ubicacionPunto">Ubicacion</string>
    <string name="mapaPunto">Mapa</string>
    <string name="idRutaPunto">id_ruta</string>
    <string name="nombreUsuario">Nombre</string>
    <string name="CorreoUsuario">Correo</string>
    <string name="telefonoUsuario">Telefono</string>
    <string name="DireccionUsuario">Direccion</string>
    <string name="contrasenaUsuario">Contrasena</string>
    //nose
    <string name="imagenLibro">Imagen del libro</string>
    //nose
    <string name="infoRuta">Descripcion de la Ruta</string>
    <string name="actualizarRuta">Actualizar Ruta</string>
    <string name="actualizarParada">Actualizar Parada</string>
    <string name="actualizarPunto">Actualizar Punto</string>
    <string name="actualizarUsuario">Actualizar Usuario</string>
    <string name="verRutas">Rutas</string>
    <string name="verParadas">Paradas</string>
    <string name="verPuntosRecarga">Puntos de Recarga</string>
    <string name="verUsuarios">Usuarios</string>
    <string name="miRuta">Mi Ruta</string>
    <string name="prestarRuta">Prestar Ruta</string>
    <string name="misRutasPrestados">Mis Rutas Prestados</string>
    <string name="prestar">Prestar</string>
    <string name="ver">Ver</string>
    <string name="devolver">Devolver</string>
    <string name="fecha">Fecha Prestamo</string>
    <string name="rutasPrestados">Rutas Prestados</string>
    <string name="correoelectronico">Correo</string>
    <string name="buscar">Buscar</string>
    <string name="seleccionar">SELECCIONAR UNA RUTA</string>
    <string name="precioRuta">Precio</string>
    <string name="verCupos">Cupos</string>
    <string name="agregarCupo">Agregar Cupo</string>
    <string name="precioCupo">Valor</string>
    <string name="fechaCupo">dd/mm/aaaa</string>
    <string name="descripcionCupo">Detalles</string>
    <string name="horaCupo">00:00</string>
    <string name="actualizarCupo">Actualizar Cupo</string>
    <string name="horaICupo">Hora de llegada</string>
    <string name="horaSCupo">Hora de salida</string>
    <string name="userCupo">Usuario</string>
    <string name="verMisPublicaciones">Mis Publicaciones: </string>
    <string name="seleccionarParada">SELECCIONAR PARADAS</string>
</resources>