<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical"
    tools:context=".admin.AdminAgregarRutaActivity">
    <include layout="@layout/toolbar"/>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="Agregar Ruta"
        android:textColor="#8da000"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <EditText
                    android:id="@+id/nombreAgregarRuta"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:hint="@string/nombreRuta"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textColor="#8da000"
                    android:textColorHint="#8da000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/descripcionAgregarRuta"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:hint="@string/descripcionRuta"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textColor="#8da000"
                    android:textColorHint="#8da000"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/precioAgregarRuta"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:hint="@string/precioRuta"
                    android:inputType="number"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textColor="#8da000"
                    android:textColorHint="#8da000"
                    android:textSize="20sp" />


                <EditText
                    android:id="@+id/fotoAgregarRuta"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:hint="@string/fotoRuta"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textColor="#8da000"
                    android:textColorHint="#8da000"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/tipoAgregarRuta"
                    android:layout_width="match_parent"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:hint="@string/tipoRuta"
                    android:inputType="textPersonName"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textColor="#8da000"
                    android:textColorHint="#8da000"
                    android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinner1"
                    android:layout_width="120dp"
                    android:layout_height="63dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/seleccionarParada"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <ImageButton
                        android:id="@+id/agregar1"
                        android:layout_width="63dp"
                        android:layout_height="31dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/back_login_txt"
                        android:src="@drawable/agregar"/>
                    <ImageButton
                        android:id="@+id/agregar2"
                        android:layout_width="63dp"
                        android:layout_height="31dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:textColor="@color/white"
                        android:background="@drawable/back_login_txt"
                        android:src="@drawable/eliminar"/>

                </LinearLayout>
                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_width="120dp"
                    android:layout_height="63dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginRight="10dp"
                    android:spinnerMode="dialog"
                    android:prompt="@string/seleccionar"
                    android:background="@drawable/back_login_txt"
                    android:ems="10"
                    android:paddingLeft="20dp"
                    android:textAlignment="textStart"
                    android:textSize="20sp"/>
            </LinearLayout>


            <Button
                    android:id="@+id/btnAgregarRuta"
                    android:layout_width="match_parent"
                    android:layout_height="76dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="50dp"
                    android:background="@drawable/back_login"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/agregarRuta"
                    android:textAllCaps="true"
                    android:textColor="#BAA7A7"
                    android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>